--- a/CBApp/CBApp/CBApp/Base.lproj/Main.storyboard
+++ b/CBApp/CBApp/CBApp/Base.lproj/Main.storyboard
@@ -621,6 +621,23 @@
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xT1-Yd-nHU" customClass="CBIconButton" customModule="CBToolkit">
+                                                    <rect key="frame" x="245" y="48" width="50" height="50"/>
+                                                    <animations/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="Xjz-Zk-wp3"/>
+                                                        <constraint firstAttribute="height" constant="50" id="lWw-3F-tdA"/>
+                                                    </constraints>
+                                                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="size" keyPath="iconSize">
+                                                            <size key="value" width="40" height="40"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <action selector="iconButtonSelected:" destination="PiS-sF-vIY" eventType="touchUpInside" id="v1C-ah-VbE"/>
+                                                    </connections>
+                                                </button>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pGx-Ys-mJ9" customClass="CBBorderView" customModule="CBToolkit">
                                                     <rect key="frame" x="8" y="110" width="314" height="22"/>
                                                     <subviews>
@@ -672,18 +689,6 @@
                                                             <color key="value" white="0.75" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
-                                                </button>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xT1-Yd-nHU" customClass="CBIconButton" customModule="CBToolkit">
-                                                    <rect key="frame" x="235" y="147" width="30" height="30"/>
-                                                    <animations/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="30" id="Xjz-Zk-wp3"/>
-                                                        <constraint firstAttribute="height" constant="30" id="lWw-3F-tdA"/>
-                                                    </constraints>
-                                                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <connections>
-                                                        <action selector="iconButtonSelected:" destination="PiS-sF-vIY" eventType="touchUpInside" id="v1C-ah-VbE"/>
-                                                    </connections>
                                                 </button>
                                                 <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4PO-13-tPL" customClass="CBBorderView" customModule="CBToolkit">
                                                     <rect key="frame" x="8" y="184" width="314" height="40"/>
@@ -992,7 +997,6 @@
                                             <constraint firstAttribute="bottom" secondItem="yrR-ds-RVh" secondAttribute="bottom" id="KaV-Wb-4TJ"/>
                                             <constraint firstItem="4PO-13-tPL" firstAttribute="leading" secondItem="PiS-sF-vIY" secondAttribute="leadingMargin" id="LNg-Hb-AHJ"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="LH3-9V-KCY" secondAttribute="trailing" id="Mzs-hf-zfg"/>
-                                            <constraint firstItem="xT1-Yd-nHU" firstAttribute="centerY" secondItem="TeK-1W-A6W" secondAttribute="centerY" id="Nqm-Zt-1Fh"/>
                                             <constraint firstItem="YOQ-c3-DGI" firstAttribute="top" secondItem="tX5-4F-Jlp" secondAttribute="bottom" constant="12" id="S9v-Gl-w8a"/>
                                             <constraint firstAttribute="centerX" secondItem="LTb-sf-eM8" secondAttribute="trailing" id="TSD-1r-6SC"/>
                                             <constraint firstItem="1Z8-eq-dM3" firstAttribute="leading" secondItem="PiS-sF-vIY" secondAttribute="leadingMargin" id="VS0-vv-409"/>
@@ -1000,12 +1004,13 @@
                                             <constraint firstItem="pGx-Ys-mJ9" firstAttribute="leading" secondItem="PiS-sF-vIY" secondAttribute="leadingMargin" id="WzU-7y-SIO"/>
                                             <constraint firstItem="ELd-I5-WkB" firstAttribute="leading" secondItem="LTb-sf-eM8" secondAttribute="trailing" constant="24" id="XlI-kX-88b"/>
                                             <constraint firstItem="1Z8-eq-dM3" firstAttribute="top" secondItem="4PO-13-tPL" secondAttribute="bottom" id="ZLL-6G-zay"/>
+                                            <constraint firstItem="xT1-Yd-nHU" firstAttribute="leading" secondItem="PiS-sF-vIY" secondAttribute="centerX" constant="80" id="drY-J4-0hF"/>
                                             <constraint firstAttribute="trailing" secondItem="yrR-ds-RVh" secondAttribute="trailing" id="eJA-YC-MsL"/>
                                             <constraint firstItem="4PO-13-tPL" firstAttribute="top" secondItem="TeK-1W-A6W" secondAttribute="bottom" constant="8" id="fZo-iP-aAl"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="05C-aZ-EWJ" secondAttribute="trailing" constant="8" id="ieZ-Le-9Qx"/>
+                                            <constraint firstItem="xT1-Yd-nHU" firstAttribute="centerY" secondItem="05C-aZ-EWJ" secondAttribute="centerY" id="lfb-Rh-Mcq"/>
                                             <constraint firstItem="ELd-I5-WkB" firstAttribute="top" secondItem="Kbb-Ls-9fb" secondAttribute="bottom" constant="2" id="lnt-DG-Zle"/>
                                             <constraint firstItem="LH3-9V-KCY" firstAttribute="leading" secondItem="PiS-sF-vIY" secondAttribute="leadingMargin" id="t27-hY-CeI"/>
-                                            <constraint firstItem="xT1-Yd-nHU" firstAttribute="leading" secondItem="TeK-1W-A6W" secondAttribute="trailing" constant="20" id="uXE-O4-8jb"/>
                                             <constraint firstItem="gwT-E9-DmS" firstAttribute="leading" secondItem="Kbb-Ls-9fb" secondAttribute="trailing" constant="2" id="v8N-nB-P2D"/>
                                             <constraint firstItem="tX5-4F-Jlp" firstAttribute="top" secondItem="LTb-sf-eM8" secondAttribute="bottom" constant="16" id="vlQ-Fu-4KC"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="tX5-4F-Jlp" secondAttribute="trailing" id="vvF-qz-5bp"/>
