--- a/CBApp/CBApp/CBApp/Base.lproj/Main.storyboard
+++ b/CBApp/CBApp/CBApp/Base.lproj/Main.storyboard
@@ -633,6 +633,12 @@
                                                         <userDefinedRuntimeAttribute type="size" keyPath="iconSize">
                                                             <size key="value" width="40" height="40"/>
                                                         </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="barWidth">
+                                                            <real key="value" value="1"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="color" keyPath="highlightTintColor">
+                                                            <color key="value" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                        </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
                                                     <connections>
                                                         <action selector="iconButtonSelected:" destination="PiS-sF-vIY" eventType="touchUpInside" id="v1C-ah-VbE"/>
